Update Github Repo Address

--- a/Report.tex
+++ b/Report.tex
@@ -207,7 +207,7 @@ being sufficiently small.
 
 In this research, the above algorithm is faithfully implemented in Pure C, Haskell and Python. The Pure C implementation will provide an estimation on the efficiency limit of the calculation. And the Python implementation (accelerated by numpy) is the most popular way of scientific calculation. The Haskell implementation, however, is a major role of this research. It is invoked for an analysis on how much acceleration the lazy evaluation can bring about. 
 
-All source codes mentioned in this report can be accessed through Github. 
+All source codes mentioned in this report can be accessed through \href{https://github.com/Phy-David-Zhang/Scientific-Haskell}{Github}. 
 
 \section{Efficiency Analysis}
 
